exports[`test setLocation 1`] = `
Object {
  "location": "Pennsylvania",
  "text": "",
}
`;

exports[`test setText 1`] = `
Object {
  "location": "New York",
  "text": "Penn",
}
`;

exports[`test undefined 1`] = `
Object {
  "location": "New York",
  "text": "",
}
`;
